--- a/controle_de_pessoas/pubspec.yaml
+++ b/controle_de_pessoas/pubspec.yaml
@@ -1,4 +1,4 @@
-name: primeiro
+name: projetos
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -61,7 +61,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - images/bground.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
